# A6-ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Ellipsoid.cpp  Ellipsoid.h  Image.cpp  Image.h  Light.h  Material.cpp  Material.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Timer.h  main.cpp  tri_intersect.h
